fix: responsive layout, remove horizontal scroll

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4,6 +4,9 @@
   License MIT: https://github.com/HermanMartinus/bearblog/blob/master/LICENSE.md
  */
 
+*, *::before, *::after {
+        box-sizing: border-box;
+}
 :root {
 	--accent: #2337ff;
 	--accent-dark: #000d8a;
@@ -25,12 +28,13 @@ body {
 	background-size: 100% 600px;
 	word-wrap: break-word;
 	overflow-wrap: break-word;
+	overflow-x: hidden;
 	color: rgb(var(--gray-dark));
 	font-size: 20px;
 	line-height: 1.7;
 }
 main {
-	width: 720px;
+	width: 100%;
 	max-width: calc(100% - 2em);
 	margin: auto;
 	padding: 3em 1em;
